--- a/3PS.vcxproj
+++ b/3PS.vcxproj
@@ -103,14 +103,17 @@
     <ClInclude Include="math_3d.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Mission.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="OpenGLincludes.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Utils.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3PS.cpp" />
@@ -122,6 +125,7 @@
     <ClCompile Include="math_3d.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Mission.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Shader.cpp" />
